src/snapshots/lambda3__tests__parse simple lambda with missing body and rparen.snap
---
source: src/lib.rs
expression: "(text, parse.errors, node)"
---
(
    "(\\x ->",
    [
        "Expected expression",
        "UNEXPECTED TOKEN EOF",
    ],
    ROOT@0..6
      PARENTHESIZED@0..6
        L_PAREN@0..1 "("
        LAMBDA@1..6
          LAM@1..2 "\\"
          WORD@2..3 "x"
          WHITESPACE@3..4 " "
          ARROW@4..6 "->"
          ERROR@6..6
        ERROR@6..6
    ,
)
