src/snapshots/lambda3__tests__test@missing_body.l3.snap
---
source: src/lib.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/missing_body.l3
---
(
    "(\\x ->)",
    [
        "Expected expression",
    ],
    ROOT@0..7
      PARENTHESIZED@0..7
        L_PAREN@0..1 "("
        LAMBDA@1..6
          LAM@1..2 "\\"
          WORD@2..3 "x"
          WHITESPACE@3..4 " "
          ARROW@4..6 "->"
          ERROR@6..6
        R_PAREN@6..7 ")"
    ,
)
